--- a/styles/footer.css
+++ b/styles/footer.css
@@ -6,12 +6,12 @@ footer {
   width: 100%;
   text-align: start;
   padding: 10px 10px;
+  background-color: var(--main-back-color);
 }
 
 @media only screen and (max-width: 768px) {
   footer {
     padding: 20px 10px;
-    background-color: white;
   }
 }
 
@@ -26,4 +26,5 @@ footer a {
 
 footer a:hover {
   color: var(--main-bg-color);
+  border: none;
 }
