--- a/styles/back.css
+++ b/styles/back.css
@@ -4,7 +4,7 @@
 }
 .backLink {
   position: sticky;
-  top: 0;
+  top: 60px;
   padding: 10px 0;
-  background-color: white;
+  background-color: var(--background-color);
 }
