--- a/styles/post.css
+++ b/styles/post.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 768px) {
   article {
-    padding: 20px !important;
+    padding: 0 20px 20px 20px !important;
     margin-bottom: 20px !important;
   }
 }
@@ -31,7 +31,7 @@ svg {
 
 .post blockquote {
   border: 1px dashed lightgray;
-  background-color: #f5f5f5;
+  background-color:var(--background-color);
   color: gray;
   margin: 0;
   padding: 10px 0;
