--- a/styles/print.css
+++ b/styles/print.css
@@ -5,9 +5,50 @@
     display: none;
   }
 
+  .resume {
+    display: grid;
+    grid-template-areas:
+      'title title title'
+      'left right right'
+      'left right right';
+  }
+
+  .title {
+    grid-area: title;
+  }
+
+  .left {
+    grid-area: left;
+    border-right: 5px solid black;
+    padding-right: 20px;
+    margin-right: 20px;
+  }
+
+  .right {
+    grid-area: right;
+  }
+
   .section {
     padding: 0 0 20px 0 !important;
     margin: 10px !important;
     color: black !important;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  h2 {
+    font-size: 1.2rem;
+  }
+
+  h3,
+  h4 {
+    font-size: 1rem;
+  }
+
+  li,
+  p {
+    font-size: 0.8rem;
   }
 }
