--- a/styles/resume.css
+++ b/styles/resume.css
@@ -1,13 +1,13 @@
 .resume {
   display: grid;
-  /* grid-template-columns: auto auto; */
+  grid-template-rows: auto;
 
-  grid-template-areas:
+  /* grid-template-areas:
     'title title title'
     'left right right'
-    'left right right';
-  /* align-content: start;
-  justify-content: center; */
+    'left right right'; */
+  align-content: start;
+  justify-content: center;
 }
 
 .resume h1 {
@@ -18,34 +18,37 @@
   /* margin: 10px 0; */
 }
 
-.resume  h2 {
+.resume h2 {
   background-color: transparent;
   padding: 0;
   font-size: 1.5rem;
   font-weight: 900;
 }
 
-.resume h3{
+.resume h3 {
   padding: 0;
   margin: 0;
   font-size: 1.2rem;
   text-transform: uppercase;
 }
 
-.resume h4{
+.resume h4 {
   padding: 0;
   margin: 0;
+  text-transform: uppercase;
 }
 
 .title {
-  grid-area: title;
+  /* grid-area: title; */
 }
+
 .left {
-  grid-area: left;
-  border-right: 5px solid black;
+  /* grid-area: left; */
+  /* border-right: 5px solid black;
   padding-right: 20px;
-  margin-right: 20px;
+  margin-right: 20px; */
 }
+
 .right {
-  grid-area: right;
+  /* grid-area: right; */
 }
