fix background color to white when print

--- a/styles/print.css
+++ b/styles/print.css
@@ -1,4 +1,11 @@
 @media only print {
+  html,
+  body {
+    background-color: white;
+    padding: 5px;
+    margin: 5px;
+  }
+
   header,
   .printButton,
   footer {
