--- a/styles/education.css
+++ b/styles/education.css
@@ -2,9 +2,6 @@
   margin: 10px 0;
 }
 
-.education > h2 {
-  background-color: transparent;
-  font-size: 1.5rem;
-  padding: 0;
-  text-align: start !important;
+.education > .content {
+  padding-left: 5px;
 }
