--- a/styles/resume.css
+++ b/styles/resume.css
@@ -1,21 +1,21 @@
 .resume {
   display: grid;
-  grid-template-rows: auto;
+  /* grid-template-rows: auto; */
 
-  /* grid-template-areas:
+  grid-template-areas:
     'title title title'
     'left right right'
-    'left right right'; */
-  align-content: start;
-  justify-content: center;
+    'left right right';
+    grid-gap: 10px;
+  /* align-content: start;
+  justify-content: center; */
 }
 
 .resume h1 {
-  color: var(--title-color);
   font-size: 3rem;
   text-align: start;
   padding: 0;
-  /* margin: 10px 0; */
+  margin:0;
 }
 
 .resume h2 {
@@ -23,6 +23,7 @@
   padding: 0;
   font-size: 1.5rem;
   font-weight: 900;
+  text-transform: uppercase;
 }
 
 .resume h3 {
@@ -39,16 +40,16 @@
 }
 
 .title {
-  /* grid-area: title; */
+  grid-area: title;
 }
 
 .left {
-  /* grid-area: left; */
-  /* border-right: 5px solid black;
-  padding-right: 20px;
-  margin-right: 20px; */
+  grid-area: left;
+  border-right: 5px solid black;
+  padding-right: 10px;
+  margin-right: 20px;
 }
 
 .right {
-  /* grid-area: right; */
+  grid-area: right;
 }
