--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,23 +2,24 @@
 @import 'post.css';
 @import 'about.css';
 @import 'footer.css';
-@import 'tags.css';
+/* @import 'tags.css'; */
 @import 'back.css';
 @import 'education.css';
 @import 'profile.css';
 @import 'proffesionalExperience.css';
 @import 'print.css';
 @import 'resume.css';
+@import 'blog.css';
 
-:root {
-  --background-color: #e1ece8;
+:root  {
+  --background-color: #f1f1f1;
+  --background-s-color: #f0fffa;
   --title-color: #00303f;
   --text-color: #00303f;
   --title-bg-color: #dcae1d;
   --icon-color: #7a9d96;
   --menu-text-color: #00303f;
   --menu-text-selected-color: #7a9d96;
-  --main-tags-columns: 40;
 }
 
 html,
@@ -26,7 +27,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Noto Sans JP', sans-serif;
-/* font-family: 'Roboto', sans-serif; */
+  /* font-family: 'Roboto', sans-serif; */
   background-color: var(--background-color);
   cursor: default;
 }
@@ -46,15 +47,23 @@ h2 {
   justify-self: center;
 }
 
-h1, h2 {
+h1,
+h2 {
   color: var(--title-color);
 }
 
-p, li, h1, h2, h3, h4, a, div {
+p,
+li,
+h1,
+h2,
+h3,
+h4,
+a,
+div {
   color: var(--text-color);
 }
 
-a  {
+a {
   width: fit-content;
   text-decoration: none;
   border-bottom: 1px solid transparent;
